# mpalsts

./: Cargo.toml  LICENSE  README.md  bacon.toml
.circleci/: config.yml
.forgejo/workflows/: build-linux.yml  clippy.yml
.github/workflows/: build-macos.yml
crates/als/: Cargo.toml  build.rs
crates/als/src/: error.rs  lib.rs  linux.rs  macos.rs  tests.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/theme-switch/: Cargo.toml
crates/theme-switch/src/: lib.rs  linux.rs  macos.rs
src/: main.rs  rustfmt.toml
