[package]
name = "als"
version = "0.1.0"
edition = "2024"

[lints.rust]
async_fn_in_trait = "allow"

[lints.clippy]
needless_return = "allow"
implicit_return = "warn"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
thiserror = "2.0.18"
futures = "0.3.32"
async-stream = "0.3.6"
futures-time = "3.1.0"

[dev-dependencies]
smol = "2.0.2"

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-io-kit = "0.3.2"
objc2-sensor-kit = "0.3.2"
