[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[lints.clippy]
needless_return = "allow"
implicit_return = "warn"

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.1"
anyhow = "1.0.102"
directories = "6.0.0"
