[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[lints.clippy]
needless_return = "allow"
implicit_return = "warn"

[[bin]]
name = "mpalsts-gui"
path = "src/main.rs"

[dependencies]
als = { path = "../als" }
theme-switch = { path = "../theme-switch" }

anyhow = "1.0.102"
directories = "6.0.0"
env_logger = { workspace = true }
futures = "0.3.32"
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
gpui_platform = { workspace = true }
log = { workspace = true }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
auto-launch = "0.6.0"
